--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div>
 		
 			<div id="textlogo">
-				<h1 class="site-name"><a href="/" title="Hexo">Hexo</a></h1>
+				<h1 class="site-name"><a href="/" title="Wang jie">Wang jie</a></h1>
 				<h2 class="blog-motto"></h2>
 			</div>
 			<div class="navbar"><a class="navbutton navmobile" href="#" title="Menu">
@@ -118,14 +118,11 @@
     <footer><div id="footer" >
 	
 	
-	<section class="info">
-		<p> 没有礁石，就没有美丽的浪花；没有挫折，就没有壮丽的人生！ <br/>
-			再长的路，一步步也能走完，再短的路，不迈开双脚也无法到达，平凡的脚步也可以走完伟大的行程！</p>
-	</section>
+	
 	 
 	<div class="social-font" class="clearfix">
 		
-		<a href="http://weibo.com/2583230784" target="_blank" title="weibo"></a>
+		<a href="http://weibo.com/wangxiaore" target="_blank" title="weibo"></a>
 		
 		
 		<a href="https://twitter.com/idreajay" target="_blank" title="twitter"></a>
