Signed-off-by: 王杰 <909901326@qq.com>

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		
 		
 	</div>
-		<p class="copyright">Powered by <a href="http://Wangxiaore.io" target="_blank" title="Wangxiaore">Wangxiaore</a> and Theme by <a href="https://github.com/A-limon/pacman" target="_blank" title="pacman">pacman</a> © 2016 
+		<p class="copyright">Powered by <a href="http://Wangxiaore.github.io" target="_blank" title="Wangxiaore">Wangxiaore</a> and Theme by <a href="https://github.com/wangxiaore/wangxiaore.github.io" target="_blank" title="wangxiaore">wangxiaore</a> © 2016 
 		
 		<a href="http://yoursite.com" target="_blank" title="Wang jie">Wang jie</a>
 		
